# ai-react-agent

./: .gitignore  PLANO_DEMONSTRACAO.md  pyproject.toml  requirements.txt
.claude/: settings.local.json
app/: main.py
app/agents/: __init__.py  graph.py  nodes.py  route.py  state.py
app/agents/schemas/: __init__.py  request.py  response.py
app/agents/tools/: __init__.py  tools.py
app/config/: llm.py
docs/libs/: FASTAPI.md  HTTPX.md  LANGCHAIN.md  LANGGRAPH.md  PYDANTIC.md  PYTHON_DOTENV.md  UVICORN.md
tests/: conftest.py  test_agent_e2e.py  test_e2e.py
